# GeoTR

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Mesh.h  Shader.h  Vertices.h
res/: basic.shader
src/: Mesh.cpp  Shader.cpp  Vertices.cpp
